--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "react-template",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://nenerazim.github.io/react-test.github.io/",
   "type": "module",
   "author": "UBC Software Development",
   "scripts": {
+    "start": "vite",
+    "build": "build:development",
+    "predeploy": "npm run build:development",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build:development": "tsc && vite build --mode development",
     "build:staging": "tsc && vite build --mode staging",
@@ -53,6 +58,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.4",
